changes made in index

--- a/site-original/index.html
+++ b/site-original/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
 <h1>GIT CHANGES made git check it</h1>
+<h1>commit two changes</h1>
 <!-------------------- Top Navigation -------------------->
 <div class="nav-drop-shadow fixed-top">
     <div class="container custom-container">
